--- a/company/index.html
+++ b/company/index.html
@@ -235,7 +235,7 @@
     <!-- 커뮤니티 -->
 
     <!-- 오시는 길 -------------------------------------------------->
-    <div class="container-fluid" style="margin: 0 !important;padding:0 !important;">
+    <div id="maps" class="container-fluid" style="margin: 0 !important;padding:0 !important;">
       <h1 class="text-center">오시는 길</h1>
       <div id="map" style="width:100%;height:500px;"></div>
 
