--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hong Gildong's Portfolio</h1>
-    <h2>Toy Project</h2>
+    <h1>&#129333; Hong Gildong's Portfolio</h1>
+    <h2>Toy Project &#128187;</h2>
     <h3>글로벌아이티교육개발원 데모</h3>
+    <p>html5, css3, 동영상배경</p>
     <a href="https://pjs01.github.io/portfolio/company/" target="_blank">바로가기</a>
+    <h3>다이슨코리아</h3>
+    <p>html5, css3, bootstrap, responsive web</p>
+    <a href="https://pjs01.github.io/portfolio/dyson/" target="_blank">바로가기</a>
 </body>
 </html>
