--- a/hyundai/index.html
+++ b/hyundai/index.html
@@ -68,7 +68,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <video loop autoplay muted>
+            <video loop autoplay muted playsinline>
                 <source src="img/santafe-pc.mp4" type="video/mp4">                
             </video>
             <h2 class="caption">   
@@ -77,7 +77,7 @@
             </h2>
           </div>
           <div class="carousel-item">
-            <video loop autoplay muted>
+            <video loop autoplay muted playsinline>
                 <source src="img/pony-pc.mp4" type="video/mp4">
             </video>
             <h2 class="caption">   
@@ -86,7 +86,7 @@
             </h2>
           </div>
           <div class="carousel-item">
-            <video loop autoplay muted>
+            <video loop autoplay muted playsinline>
                 <source src="img/worldcup-pc.mp4" type="video/mp4">
             </video>
             <h2 class="caption">   
@@ -119,7 +119,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner" style="background: red;">
           <div class="carousel-item active">
-            <video loop autoplay muted width="100%">
+            <video loop autoplay muted playsinline width="100%">
                 <source src="img/santafe-m.mp4" type="video/mp4">
             </video>
             <h2 class="caption">   
@@ -128,7 +128,7 @@
             </h2>
           </div>
           <div class="carousel-item">
-            <video loop autoplay muted width="100%">
+            <video loop autoplay muted playsinline width="100%">
                 <source src="img/pony-m.mp4" type="video/mp4">
             </video>
             <h2 class="caption">   
@@ -137,7 +137,7 @@
             </h2>
           </div>
           <div class="carousel-item">
-            <video loop autoplay muted width="100%">
+            <video loop autoplay muted playsinline width="100%">
                 <source src="img/worldcup-m.mp4" type="video/mp4">
             </video>
             <h2 class="caption">   
