--- a/cocacola/index.html
+++ b/cocacola/index.html
@@ -23,11 +23,9 @@
 
   <!-- css 외부파일 -------------------------------------------------------------------------------------------->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/style-m.css">
 
   <!-- google font ------------------------------------------------------------------------------------------->
   <link href="https://fonts.googleapis.com/css2?family=Asta+Sans:wght@300..800&display=swap" rel="stylesheet">
-
 
   <script>
     $(document).ready(function(){
@@ -55,7 +53,7 @@
           dots: true,
           responsive: [
             {
-              breakpoint: 768,
+              breakpoint: 1400,
               settings: {
                 centerMode: true,
                 centerPadding: '20px',
@@ -246,7 +244,7 @@
   <!-- story ------------------------------------------------------------------------------------>
   <div id="story" class="container">    
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 text-box" >
         <h3>코카-콜라 Real Magic 스토리</h3>
         <div>
           1886년 탄생 이후, 코카-콜라가 걸어온 130여 년의 짜릿한 여정! 그 마법같은 이야기 속으로 초대합니다.
@@ -255,7 +253,7 @@
           <a class="btn btn-outline-dark" href="#">자세히 보기</a>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 img-box">
         <div>
           <img src="img/story01.webp" alt="coca-cola">
         </div>
@@ -267,12 +265,12 @@
   <!-- tomorrow ------------------------------------------------------------------------------------>
   <div id="tomorrow" class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 img-box">
         <div>
           <img src="img/tomorrow01.webp" alt="coca-cola">
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 text-box">
         <h3>지속 가능한 미래</h3>
         <div>
           지속 가능한 미래를 만들기 위한 코카-콜라의 다양한 활동들을 만나보세요. 전 세계 사람들의 삶과 지역사회에 긍정적인 변화를 만들어 나가기 위해 노력하고 있습니다.
